--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 </div>
 
 <!--- Cards -->
+<!--- Adding informational cards-->
 <div class="container-fluid padding">
 <div class="row padding">
 	<div class="col-md-4">
