--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
 </figure>
 
 <!--- Emoji Section -->
-<button class="fun" data-toggle="collapse" data-target="#emoji">Click here for some fun
-</button>
+<button class="fun" data-toggle="collapse" data-target="#emoji">Click here for some fun</button>
 <div id="emoji" class="collapse">
 <div class="container-fluid padding">
 <div class="row text-center">
